updated to add test data page

--- a/index.html
+++ b/index.html
@@ -265,8 +265,10 @@
             Hub which can be used to test the service. Note that when creating
             a deed the borrowers must be an exact match to the proprietors on
             the register. See example payload above for a create deed payload
-            using the data below that will work in the test hub. The test data
-            is as follows:
+            using the data below that will work in the test hub. Some example
+            test data is below. For a full list click   <a href="https://landregistry.github.io/sign-your-mortgage-documentation/test_titles.html">
+                here
+              </a>
           </p>
           <h3>Good Title</h3>
           <p><strong>Title number</strong> GR515835</p>
