added full test data

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <p><a href="#examplePayloads">Example Payloads and Responses</a></p>
         <p><a href="#testData">Test Data</a></p>
         <p><a href="#businessGateway">Business Gateway</a></p>
+        <p><a href="https://landregistry.github.io/sign-your-mortgage-documentation/test_data.html">Data Catalogue</a></p>
 
       </header>
       <section>
@@ -266,7 +267,7 @@
             a deed the borrowers must be an exact match to the proprietors on
             the register. See example payload above for a create deed payload
             using the data below that will work in the test hub. Some example
-            test data is below. For a full list click   <a href="https://landregistry.github.io/sign-your-mortgage-documentation/test_titles.html">
+            test data is below. For a full list click   <a href="https://landregistry.github.io/sign-your-mortgage-documentation/test_data.html">
                 here
               </a>
           </p>
