--- a/test_data.html
+++ b/test_data.html
@@ -31,143 +31,126 @@
       <section>
         <a name="titles"><h2>Titles</h2></a>
         <p>
-          <h3>CYM123456:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Ann Smith, Ann Smith
+          <b><u>CYM123456:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Ann Smith, Ann Smith</br></br>
 
-          <h3>CYM123457:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Ann Smith
+          <b><u>CYM123457:</b></u></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Ann Smith</br></br>
 
-          <h3>GR515835:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Ann Smith, Fredd Smith
+          <b><u>GR515835:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Ann Smith, Fredd Smith</br></br>
 
-          <h3>CYM123462:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Ann Smith
+          <b><u>CYM123462:</b></u></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Ann Smith</br></br>
 
-          <h3>CYM123458:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Ann Marie-Jones Smith, Belinda Blue, Charles John Morris Smith Jones
+          <b><u>CYM123458:</b></u></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Ann Marie-Jones Smith, Belinda Blue, Charles John Morris Smith Jones</br></br>
 
-          <h3>CYM123459:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Lisa I'anson, Ann Other
+          <b><u>CYM123459:</b></u></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Lisa I'anson, Ann Other</br></br>
 
-          <h3>CYM123461:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Ann-Marie Stacey Jane -Jones66 A'thénaïs* de Ligne de la Trémoïlle
+          <b><u>CYM123461:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Ann-Marie Stacey Jane -Jones66 A'thénaïs* de Ligne de la Trémoïlle</br></br>
 
-          <h3>CYM123460:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Liam Tremoille
+          <b><u>CYM123460:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Liam Tremoille</br></br>
 
-          <h3>NYK52340:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> David Alan Jewers,
-
-          <h3>WYK722599:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Julia Hannah Northin, Mr David Alan Jewers
-
-          <h3>LA959359:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> David Jewers
-
-          <h3>WYK690977:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Liam Tremoille
+          <b><u>WYK690977:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Liam Tremoille</br></br>
 
 
-          <h3>WYK690978:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Ann Smith, Mark James Strong, Sue Anne Randall, Lee Thomson
+          <b><u>WYK690978:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Ann Smith, Mark James Strong, Sue Anne Randall, Lee Thomson</br></br>
 
-          <h3>WYK690999:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Edward Tree
+          <b><u>WYK690999:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Edward Tree</br></br>
 
-          <h3>WYK690988:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> A Rep, Liam Tremoille
+          <b><u>WYK690988:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> A Rep, Liam Tremoille</br></br>
 
-          <h3>DN510404:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Ann Smith
+          <b><u>DN510404:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Ann Smith</br></br>
 
-          <h3>DN510405:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Ann Smith
+          <b><u>DN510405:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Ann Smith</br></br>
 
-          <h3>DN653762:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Ann Smith
+          <b><u>DN653762:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Ann Smith</br></br>
 
-          <h3>AGL101141:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Fred Smith
+          <b><u>AGL101141:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Fred Smith</br></br>
 
-          <h3>GR562257:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> James Tiberius Kirk
+          <b><u>GR562257:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> James Tiberius Kirk</br></br>
 
-          <h3>CYM123499:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Adam Stevensmum
+          <b><u>CYM123499:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Adam Stevensmum</br></br>
 
-          <h3>CYM123400:</h3>
-          <b>Type:</b> Absolute Freehold
-          <b>Proprietors:</b> Ann Smith
+          <b><u>CYM123400:</u></b></br>
+          <b>Type:</b> Absolute Freehold</br>
+          <b>Proprietors:</b> Ann Smith</br></br>
 
-          <h3>GR517730:</h3>
-          <b>Type:</b> Possessory Freehold
-          <b>Proprietors:</b> Ann Smith
+          <b><u>GR517730:</u></b></br>
+          <b>Type:</b> Possessory Freehold</br>
+          <b>Proprietors:</b> Ann Smith</br></br>
 
-          <h3>GR314108:</h3>
-          <b>Type:</b> Absolute Leasehold
-          <b>Proprietors:</b> Ann Smith
+          <b><u>GR314108:</u></b></br>
+          <b>Type:</b> Absolute Leasehold</br>
+          <b>Proprietors:</b> Ann Smith</br></br>
 
-          <h3>GR517788:</h3>
-          <b>Type:</b> Good Leasehold
-          <b>Proprietors:</b> Ann Smith
+          <b><u>GR517788:</u></b></br>
+          <b>Type:</b> Good Leasehold</br>
+          <b>Proprietors:</b> Ann Smith</br></br>
 
-          <h3>AV182773:</h3>
-          <b>Type:</b> Possessory Leasehold
-          <b>Proprietors:</b> Ann Smith
+          <b><u>AV182773:</u></b></br>
+          <b>Type:</b> Possessory Leasehold</br>
+          <b>Proprietors:</b> Ann Smith</br></br>
         </p>
         <a name="invalidTitles"><h2>Invalid Titles</h2></a>
         <p>
-          GR519209: Franchise
-          GR519208: Relating Franchise
-          GR528321: Profit of prendre in gross
-          BK265471: Qualified Freehold
-          GR543543: Scheme Title Freehold
-          GR516921: Qualified Leasehold
-          AV211374: Qualified Rentcharge
-          BK257662: Scheme Title Leasehold
-          AV29204:  Absolute Rentcharge
-          CH163582: Possessory Rentcharge
-          BK308598: Caution
-          GR518039: Closed
-          GR518327: Title closed/continued under another number
-          DT12345: Scheme Freehold
-          GR146463: developer
-          DT58118: common parts
-          CYM497: common units
+          <b>GR519209:</b> Franchise</br>
+          <b>GR519208:</b> Relating Franchise</br>
+          <b>GR528321:</b> Profit of prendre in gross</br>
+          <b>BK265471:</b> Qualified Freehold</br>
+          <b>GR543543:</b> Scheme Title Freehold</br>
+          <b>GR516921:</b> Qualified Leasehold</br>
+          <b>AV211374:</b> Qualified Rentcharge</br>
+          <b>BK257662:</b> Scheme Title Leasehold</br>
+          <b>AV29204:</b>  Absolute Rentcharge</br>
+          <b>CH163582:</b> Possessory Rentcharge</br>
+          <b>BK308598:</b> Caution</br>
+          <b>GR518039:</b> Closed</br>
+          <b>GR518327:</b> Title closed/continued under another number</br>
+          <b>DT12345:</b> Scheme Freehold</br>
+          <b>GR146463:</b> developer</br>
+          <b>DT58118:</b> common parts</br>
+          <b>CYM497:</b> common units</br>
         </p>
 
         <a name="mdRefs"><h2>MD Refs</h2></a>
         <p>
-          <b>e-MD12344:</b> Standard
-          <b>e-MD559:</b> Standard
-          <b>e-MD047W:</b> Standard
-          <b>e-MD1292A:</b> Standard
-          <b>e-MD1294:</b> Standard
-          <b>e-MD1291A:</b> Contains custom lender ref field and date of mortgage offer
-          <b>e-MD1281G:</b> Standard
-          <b>e-MD047V:</b> Standard
-          <b>e-MD1029G:</b> Contains custom legal header
+          e-MD12344</br>
+          e-MD559</br>
+          e-MD1292A</br>
+          e-MD1294</br>
         </p>
 
 
