changed http to https

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
           </p>
           <p>The URL's for the Test-Hub are as follows:</p>
           <h3>Borrower Frontend</h3>
-          <a href="http://sign-your-mortgage-deed.landregistry.gov.uk/testhub">
-            http://sign-your-mortgage-deed.landregistry.gov.uk/testhub
+          <a href="https://sign-your-mortgage-deed.landregistry.gov.uk/testhub">
+            https://sign-your-mortgage-deed.landregistry.gov.uk/testhub
           </a>
           <h3>Deed API</h3>
-          <a href="http://bgtest.landregistry.gov.uk/api/deeds">
-            http://bgtest.landregistry.gov.uk/api/deeds
+          <a href="https://bgtest.landregistry.gov.uk/api/deeds">
+            https://bgtest.landregistry.gov.uk/api/deeds
           </a>
         </div>
         <div class="schemas">
