Changed service names as per acceptance criteria

--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
       <section>
         <a name="aboutThisService"><h2>About This Service</h2></a>
         <p>
-          The Sign Your Mortgage service allows a conveyancer to create a
+          HM Land Registry's Digital Mortgage service consists of 2 linked services:
+
+          Create and Manage Mortgage Deeds - for conveyancers.
+
+          Sign Your Mortgage Deed - for borrowers.
+
+          Create and Manage Mortgage Deeds allows a conveyancer to create a
           digital mortgage using the interface provided by Deed-API. The
           service also provides endpoints for getting a created deed, checking
           which deeds have been signed by borrowers, and making a deed effective.
