Changed layout slightly

--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
         <a name="aboutThisService"><h2>About This Service</h2></a>
         <p>
           HM Land Registry's Digital Mortgage service consists of 2 linked services:
-
-          Create and Manage Mortgage Deeds - for conveyancers.
-
-          Sign Your Mortgage Deed - for borrowers.
-
+        </p>
+        <ul>
+          <li>Create and Manage Mortgage Deeds - for conveyancers.</li>
+          <li>Sign Your Mortgage Deed - for borrowers.</li>
+        </ul>
+        <p>
           Create and Manage Mortgage Deeds allows a conveyancer to create a
           digital mortgage using the interface provided by Deed-API. The
           service also provides endpoints for getting a created deed, checking
