--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </p>
         <p>
           The organisation carrying out the checks will be able to perform the identity checks by calling the
-          /identity-checked endpoint on the system and providing the name address and date of birth for each borrower.
+          /identity-checked endpoint on the system and providing the name address, ID and date of birth for each borrower.
         </p>
         <p>
           The identity-checked endpoint is documented in the
