changed endpoint name

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         <h3>If the checks will be performed by a different organisation than the one that created the deed</h3>
         <p>
           If the checks will be carried out by a different organisation than the one creating the deed then on deed
-          creation the identity_checked value should be set to "N".
+          creation the identity_checks value should be set to "N".
         </p>
         <p>
           The organisation carrying out the checks will be able to perform the identity checks by calling the
-          /identity-checked endpoint on the system and providing the name address, ID and date of birth for each borrower.
+          /identity-checks endpoint on the system and providing the name address, ID and date of birth for each borrower.
         </p>
         <p>
           The identity-checked endpoint is documented in the
