--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Sign Your Mortgage Documentation</title>
+    <title>Digital Mortgage Documentation</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
     <div class="wrapper">
       <header>
 
-        <h1>Sign Your Mortgage Documentation</h1>
-        <p>Sign Your Mortgage API Documentation</p>
+        <h1>Digital Mortgage Documentation</h1>
+        <p>Create and Manage Mortgage Deeds API Documentation</p>
 
         <p class="view"><a href="https://github.com/LandRegistry/deed-api">
           View the Project on GitHub <small>LandRegistry/deed-api</small></a>
