updated schema yml, json and index for new is_second_charge property

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     "md_ref": "e-MD12344",
     "property_address": "80 High Street, Plymouth, Devon, PL6 5WS",
     "identity_checked": "Y",
+    "is_second_charge": "Y",
     "borrowers": [
         {
             "forename": "Ann",
