--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
     "identity_checked": "Y",
     "property_address": "80 High Street, Plymouth, Devon, PL6 5WS",
     "status": "DRAFT",
+    "expiry_date": "Sat, 20 Jul 2019 12:34:27 GMT",
     "title_number": "GR515835",
     "token": "0b29c37b-1896-4219-832d-5ddf499a6027"
   }
