updates to the dev-pack to mimic the swagger

--- a/index.html
+++ b/index.html
@@ -346,6 +346,13 @@
 ]
                 </code>
             </pre>
+            <pre>
+              <code>
+{
+    "message": "There are currently no in-progress deeds"
+}
+              </code>
+            </pre>
             401 Unauthenticated
             <pre>
                 <code>
