--- a/index.html
+++ b/index.html
@@ -329,14 +329,13 @@
         "surname": "Smith",
         "id": 338,
         "signature": "N",
-        "middle_name": null,
         "forename": "Ann"
       },
       {
         "surname": "Smith",
         "id": 339,
         "signature": "N",
-        "middle_name": null,
+        "middle_name": "Patrick",
         "forename": "Fredd"
       }
     ],
