--- a/index.html
+++ b/index.html
@@ -165,29 +165,29 @@
           </p>
           <p>
             The correct format for the Authorization header is to add your username and password seperated by a colon.
-            As an example you could have 'rodneysteel' as the username and 'password' as the password. Which would look like:
+            As an example you could have 'johnsmith' as the username and 'password' as the password. Which would look like:
 <pre>
   <code>
-  rodneysteel:password
+  johnsmith:password
   </code>
 </pre>
             Then Base64 encode this string, would which look like:
 <pre>
   <code>
-  cm9kbmV5c3RlZWw6cGFzc3dvcmQ=
+  am9obnNtaXRoOnBhc3N3b3Jk
   </code>
 </pre>
             Finally, you will need to add this Base64 encoded username and password to your Authorization header for the request.
 <pre>
   <code>
   Key: Authorization
-  Value: Basic cm9kbmV5c3RlZWw6cGFzc3dvcmQ=
+  Value: Basic am9obnNtaXRoOnBhc3N3b3Jk
   </code>
 </pre>
           </p>
 
           <p>
-            If the request is successfull, the expected payload for the enpoint will be returned. If however there is an issue with your username and password, the following responses may be returned:
+              In the future, Authorization headers will be mandatory. This will be communicated to conveyancers nearer the time. If the request is successfull, the expected payload for the endpoint will be returned. If however there is an issue with your username and password, the following responses will be returned:
           </p>
 401 UNAUTHORIZED
 <pre>
