--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <p><a href="#jsonSchemas">Schemas</a></p>
         <p><a href="#identityChecks">Identity Checks</a></p>
         <p><a href="#intermediary">Using This Service as an Intermediary</a></p>
+        <p><a href="#makeEffective">Make Deed Effective</a></p>
         <p><a href="#testHub">Test Hub</a></p>
         <p><a href="#examplePayloads">Example Payloads and Responses</a></p>
         <p><a href="#testData">Test Data</a></p>
@@ -155,6 +156,17 @@
               <b>*NOTE*</b> If you set a value in the "proxy_organisation_name" field then only this organisation will
               be able to make the deed effective.
             </p>
+          </p>
+        </div>
+
+        <div class="schemas">
+          <a name="makeEffective"><h2>Make Deed Effective</h2></a>
+          <p>
+            When making a deed effective, if no payload is sent. It will then
+            make the deed effective with the current date and time. If a 
+            payload is sent then it will use that date and time to make the deed 
+            effective. It does however require that the date and time sent through is
+            after the last signed timestamp and before the current time. 
           </p>
         </div>
         <div class="schemas">
@@ -510,6 +522,12 @@
 
           <h3>Make deed effective</h3>
           <h4>POST /deed/&lt;Deed Id&gt;/make-effective</h4>
+
+
+
+
+
+
           <h5>Responses</h5>
           200 OK
           <pre>
@@ -526,6 +544,20 @@
   "errors": [
     "Problem 1: This deed cannot be made effective as not all borrowers have signed the deed."
   ]
+}
+            </code>
+          </pre>
+          <pre>
+            <code>
+{
+  "message": "The 'effective_datetime' must be after the last signature date and time and before the current date or time."
+}
+            </code>
+          </pre>
+          <pre>
+            <code>
+{
+  "message": "The 'effective_datetime' value needs to be in the correct format - '%Y-%m-%d %H:%M:%S'"
 }
             </code>
           </pre>
