changes to the way errors are displayed

--- a/index.html
+++ b/index.html
@@ -561,7 +561,9 @@
           <pre>
             <code>
 {
-  "message": "The 'effective_datetime' must be after the last signature date and time and before the current date or time."
+  "errors": [
+    "Problem 1: The 'effective_datetime' must be after the last signature date and time and before the current date or time."
+  ]
 }
             </code>
           </pre>
